# s3utils

./: .gitignore  README.md  pyproject.toml  s3.py  setup.cfg  setup.py
.github/workflows/: python-ci.yml
funcs/: base.py  boto.py  minio.py  s3fs.py
s3utils/: __init__.py  base.py  boto.py  client.py  minio.py  s3.py  s3fs.py
tests/fixtures/: test_csv.csv  test_parquet.parquet.snappy
tests/unit/: test_boto.py  test_s3fs.py
tests/unittests/: test_boto.py  test_minio.py  test_s3fs.py
