[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "s3Utils"
description = "Utility functions for working with files via S3 API"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {email = "christain_nickerson@hotmail.com"},
  {name = "Christian Nickerson"}
]
dependencies = [
    "s3fs ~= 0.4.2",
    "boto3 ~= 1.19.6",
    "pyarrow == 6.0.0",
    "pandas == 1.3.4",
    "moto == 2.2.11"
]

[project.optional-dependencies]
test = [
    "pytest == 7.2.0",
    "black == 22.12.0"
]

[project.urls]
repository = "https://github.com/christian-nickerson/s3utils"

[tool.black]
line-length = 119