[metadata]
name = s3Utils
version = 0.1.0
description = Utility functions for working with files via S3 API
author = Christian Nickerson
url = https://github.com/christian-nickerson/s3utils

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    s3fs ~= 0.4.2
    boto3 ~= 1.19.6
    pyarrow == 6.0.0
    pandas == 1.3.4
    moto == 2.2.11